Fix: Card rendering issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ header h1 {
 
 header p {
   color: #cecece;
+  width: 80%;
   font-size: 2.5rem;
   font-weight: 400;
   text-align: center;
@@ -80,14 +81,13 @@ main article {
 
   /* Animate the hover effect */
   transition: transform 0.5s ease-in-out;
-}
 
-main article h1,
-h2,
-h3,
-p {
-  font-weight: 400;
-  font-size: 1rem;
+  h2,
+  h3,
+  p {
+    font-weight: 400;
+    font-size: 1rem;
+  }
 }
 
 main article:hover {
